Small bug fixes: * Mobile menu item height * Youtube video z-index on mobile (Might still not work) * Purchase dialog css fixes

--- a/css/cmCoursePageMobile.css
+++ b/css/cmCoursePageMobile.css
@@ -33,6 +33,7 @@
 	text-align: center;
 	margin: 5px;
 	height: 35px;
+	min-height: 35px;
 	width: 150px;
 	min-width: 100px;
 	display: flex;
