--- a/css/cm_landing_page.css
+++ b/css/cm_landing_page.css
@@ -47,10 +47,12 @@
 
 .checkbox {
 	line-height: 20px;
+	margin-bottom: 10px;
 }
 
 .checkbox input[type="checkbox"] {
 	opacity: 0;
+	position: absolute;
 }
 
 .checkbox label {
